# game.libretro.lutro

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/lutro/: CMakeLists.txt  lutro.txt
game.libretro.lutro/: addon.xml  addon.xml.in
